force-app/main/default/objects/HDT_AccountStatementConf__mdt/HDT_AccountStatementConf__mdt.object-meta.xml
<CustomObject>
    <label>Configurazione Estratto Conto</label>
    <pluralLabel>Configurazione Estratto Conto</pluralLabel>
</CustomObject>