force-app/main/default/objects/HDT_AccountStatementConf__mdt/fields/ColumnOrder__c.field-meta.xml
<CustomField>
    <fullName>ColumnOrder__c</fullName>
    <label>Ordine Colonna</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>