force-app/main/default/objects/HDT_AccountStatementConf__mdt/fields/ShowAmount__c.field-meta.xml
<CustomField>
    <fullName>ShowAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Se abilitato mostra il campo &quot;Importo totale&quot; nella header della tabella</inlineHelpText>
    <label>Visualizza Importo Totale</label>
    <type>Checkbox</type>
</CustomField>