force-app/main/default/objects/HDT_AccountStatementConf__mdt/fields/ShowSort__c.field-meta.xml
<CustomField>
    <fullName>ShowSort__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Abilita la funzione di ordinamento colonna</inlineHelpText>
    <label>Ordina</label>
    <type>Checkbox</type>
</CustomField>